--- a/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
+++ b/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
@@ -128,7 +128,7 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="112.5"/>
         </scene>
-        <!--Edit Photo-->
+        <!--Edit Photo View Controller-->
         <scene sceneID="MVj-Qc-f7e">
             <objects>
                 <viewController storyboardIdentifier="editPhotoSB" id="ak9-dC-Krh" customClass="EditPhotoViewController" customModule="PhotoJournal" customModuleProvider="target" sceneMemberID="viewController">
@@ -139,7 +139,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X5F-mu-yOC">
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem title="Photo Library" id="LnR-Nd-IGv"/>
+                                    <barButtonItem title="Photo Library" id="LnR-Nd-IGv">
+                                        <connections>
+                                            <action selector="addPhotoFromLibraryButtonPressed:" destination="ak9-dC-Krh" id="WPy-Mu-JTB"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="MIa-3O-Cgg"/>
                                     <barButtonItem systemItem="camera" id="d0u-US-Pff"/>
                                 </items>
@@ -176,7 +180,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="k9e-lG-VMg"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit Photo" id="t7L-3N-Rjt">
+                    <navigationItem key="navigationItem" id="t7L-3N-Rjt">
                         <barButtonItem key="backBarButtonItem" title="Cancel" id="WfP-ux-fqY"/>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="Tjr-Ql-91t">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fzj-Ea-NPl">
@@ -184,8 +188,15 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save"/>
                             </button>
+                            <connections>
+                                <action selector="savePhotoButtonPressed:" destination="ak9-dC-Krh" id="frs-dK-jdZ"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="photoImageView" destination="O5d-lP-Vnr" id="hQr-F9-EJs"/>
+                        <outlet property="titleTextField" destination="n70-9u-5XP" id="KTg-C8-Zjx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UhN-Kn-GGP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
