--- a/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
+++ b/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
@@ -37,24 +37,24 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="379" height="272"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X1w-7x-81g">
-                                                    <rect key="frame" x="333" y="272" width="46" height="42"/>
+                                                    <rect key="frame" x="329" y="272" width="50" height="42"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="46" id="0Nb-ux-fDl"/>
+                                                        <constraint firstAttribute="width" constant="50" id="0Nb-ux-fDl"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                     <state key="normal" title="..."/>
                                                 </button>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="o1f-6r-bat">
-                                                    <rect key="frame" x="0.0" y="272" width="323" height="41"/>
+                                                    <rect key="frame" x="0.0" y="272" width="319" height="41"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wN-Ep-vkh">
-                                                            <rect key="frame" x="0.0" y="0.0" width="323" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="319" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pK-zz-DH3">
-                                                            <rect key="frame" x="0.0" y="20.5" width="323" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="20.5" width="319" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -154,10 +154,9 @@
                                     <constraint firstAttribute="width" secondItem="O5d-lP-Vnr" secondAttribute="height" multiplier="1:1" id="Quj-ow-DVp"/>
                                 </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="n70-9u-5XP">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="hello" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="CLc-He-qjB">
                                 <rect key="frame" x="0.0" y="88" width="414" height="311"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -168,15 +167,14 @@
                             <constraint firstItem="k9e-lG-VMg" firstAttribute="trailing" secondItem="O5d-lP-Vnr" secondAttribute="trailing" id="1n8-Dn-mNq"/>
                             <constraint firstItem="X5F-mu-yOC" firstAttribute="leading" secondItem="k9e-lG-VMg" secondAttribute="leading" id="39l-Kh-g7n"/>
                             <constraint firstItem="X5F-mu-yOC" firstAttribute="trailing" secondItem="k9e-lG-VMg" secondAttribute="trailing" id="6Js-9j-3rs"/>
-                            <constraint firstItem="O5d-lP-Vnr" firstAttribute="top" secondItem="n70-9u-5XP" secondAttribute="bottom" id="FnY-ma-CVC"/>
-                            <constraint firstItem="n70-9u-5XP" firstAttribute="top" secondItem="k9e-lG-VMg" secondAttribute="top" id="GYM-Cg-4YR"/>
                             <constraint firstItem="X5F-mu-yOC" firstAttribute="top" secondItem="O5d-lP-Vnr" secondAttribute="bottom" id="HIA-Xy-h7R"/>
-                            <constraint firstItem="n70-9u-5XP" firstAttribute="leading" secondItem="k9e-lG-VMg" secondAttribute="leading" id="WPu-bL-CbK"/>
+                            <constraint firstItem="CLc-He-qjB" firstAttribute="top" secondItem="k9e-lG-VMg" secondAttribute="top" id="KPp-ah-tPf"/>
+                            <constraint firstItem="k9e-lG-VMg" firstAttribute="trailing" secondItem="CLc-He-qjB" secondAttribute="trailing" id="gF0-4r-ccJ"/>
                             <constraint firstItem="O5d-lP-Vnr" firstAttribute="leading" secondItem="k9e-lG-VMg" secondAttribute="leading" id="j6D-2x-hl9"/>
                             <constraint firstItem="X5F-mu-yOC" firstAttribute="bottom" secondItem="k9e-lG-VMg" secondAttribute="bottom" id="jFU-ZP-vWS"/>
                             <constraint firstItem="X5F-mu-yOC" firstAttribute="top" secondItem="O5d-lP-Vnr" secondAttribute="bottom" id="lpu-a9-pz8"/>
-                            <constraint firstItem="O5d-lP-Vnr" firstAttribute="top" secondItem="n70-9u-5XP" secondAttribute="bottom" id="rPX-1L-RKg"/>
-                            <constraint firstItem="k9e-lG-VMg" firstAttribute="trailing" secondItem="n70-9u-5XP" secondAttribute="trailing" id="uF0-Ez-Q8V"/>
+                            <constraint firstItem="O5d-lP-Vnr" firstAttribute="top" secondItem="CLc-He-qjB" secondAttribute="bottom" id="mZo-7t-f2Z"/>
+                            <constraint firstItem="CLc-He-qjB" firstAttribute="leading" secondItem="k9e-lG-VMg" secondAttribute="leading" id="wwe-ne-mQ2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="k9e-lG-VMg"/>
                     </view>
@@ -187,20 +185,20 @@
                                 <rect key="frame" x="302" y="7" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="savePhotoButtonPressed:" destination="ak9-dC-Krh" eventType="touchUpInside" id="Ayi-mD-8Zc"/>
+                                </connections>
                             </button>
-                            <connections>
-                                <action selector="savePhotoButtonPressed:" destination="ak9-dC-Krh" id="frs-dK-jdZ"/>
-                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="photoImageView" destination="O5d-lP-Vnr" id="hQr-F9-EJs"/>
-                        <outlet property="titleTextField" destination="n70-9u-5XP" id="KTg-C8-Zjx"/>
+                        <outlet property="titleTextView" destination="CLc-He-qjB" id="b9l-it-ngw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UhN-Kn-GGP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1799" y="113"/>
+            <point key="canvasLocation" x="1798.5507246376812" y="112.5"/>
         </scene>
         <!--Settings-->
         <scene sceneID="jMq-Pa-laA">
