--- a/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
+++ b/PhotoJournal/PhotoJournal/Views/Base.lproj/Main.storyboard
@@ -20,53 +20,61 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="keC-px-x3d">
-                                    <size key="itemSize" width="379" height="313"/>
+                                    <size key="itemSize" width="379" height="376"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="mzk-Vb-jJu" customClass="PhotoJournalCollectionViewCell" customModule="PhotoJournal" customModuleProvider="target">
-                                        <rect key="frame" x="17.5" y="0.0" width="379" height="313"/>
+                                        <rect key="frame" x="17.5" y="0.0" width="379" height="376"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zo3-Br-iH4">
-                                            <rect key="frame" x="0.0" y="0.0" width="379" height="313"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="379" height="376"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rka-Rb-ohd">
-                                                    <rect key="frame" x="0.0" y="0.0" width="379" height="272"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rka-Rb-ohd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="379" height="284.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Rka-Rb-ohd" secondAttribute="height" multiplier="4:3" id="1Oq-TE-aos"/>
+                                                        <constraint firstAttribute="width" constant="400" id="fJH-CL-kXw"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="o1f-6r-bat">
-                                                    <rect key="frame" x="0.0" y="272" width="76" height="41"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="o1f-6r-bat">
+                                                    <rect key="frame" x="0.0" y="294.5" width="76" height="81.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wN-Ep-vkh">
-                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="70.5" height="40.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pK-zz-DH3">
-                                                            <rect key="frame" x="0.0" y="20.5" width="76" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="40.5" width="76" height="41"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X1w-7x-81g">
-                                                    <rect key="frame" x="321" y="271" width="50" height="42"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X1w-7x-81g">
+                                                    <rect key="frame" x="321" y="280" width="50" height="33"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                     <state key="normal" title="..."/>
                                                 </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="Rka-Rb-ohd" firstAttribute="leading" secondItem="zo3-Br-iH4" secondAttribute="leading" id="3uo-09-AlV"/>
                                                 <constraint firstItem="o1f-6r-bat" firstAttribute="leading" secondItem="zo3-Br-iH4" secondAttribute="leading" id="Kbe-ls-APy"/>
+                                                <constraint firstAttribute="trailing" secondItem="X1w-7x-81g" secondAttribute="trailing" id="M3J-5y-Eyj"/>
                                                 <constraint firstAttribute="bottom" secondItem="o1f-6r-bat" secondAttribute="bottom" id="iSf-U5-En5"/>
+                                                <constraint firstAttribute="trailing" secondItem="Rka-Rb-ohd" secondAttribute="trailing" id="ldX-Bf-xfZ"/>
+                                                <constraint firstItem="o1f-6r-bat" firstAttribute="top" secondItem="Rka-Rb-ohd" secondAttribute="bottom" constant="10" id="oQj-c3-Xoz"/>
+                                                <constraint firstItem="Rka-Rb-ohd" firstAttribute="top" secondItem="zo3-Br-iH4" secondAttribute="top" id="oTk-U0-92t"/>
+                                                <constraint firstAttribute="bottom" secondItem="X1w-7x-81g" secondAttribute="bottom" id="rgz-0I-fRK"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="379" height="313"/>
+                                        <size key="customSize" width="379" height="376"/>
                                         <connections>
                                             <outlet property="dateLabel" destination="6pK-zz-DH3" id="JMq-q8-cCn"/>
                                             <outlet property="photoImageView" destination="Rka-Rb-ohd" id="5tm-1w-Ve6"/>
